# algebra

./: .gitignore  Cargo.toml  README.md  linear.ts  linear_wasm.js  mod.ts  nd.ts  nd_wasm.js  test.ts  wasm.js
bindings/: helpers.ts
bindings/linear/: dmatrix.ts  matrix_f32.ts
bindings/nd/: ndarray.ts  ndarray_f32.ts
bindings/nd/ndarray_f32/: global.ts  interface.ts
linear/: Cargo.toml
linear/src/: dmatrix_f32.rs  lib.rs
nd/: Cargo.toml
nd/src/: lib.rs  ndarray_f32.rs  ndarray_helpers.rs  ndarray_slice.rs
nd/src/ndarray_f32/: array.rs  info.rs  initialization.rs  methods.rs  mod.rs  operations.rs
scripts/: build.ts
src/: dmatrix_f32.rs  lib.rs
tests/: linear_test.ts  nd_test.ts
