[package]
name = "algebra_linear"
description = "Powerful math library for Deno (nalgebra bindings)"
repository = "https://github.com/denosaurs/algebra"
license = "MIT"
version = "0.1.0"
authors = ["Filippo Rossi", "Elias Sjögreen"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = {version = "0.21", default-features = false, features = ["serde-serialize", "std"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3.40"
serde = "^1.0.59"
serde_derive = "^1.0.59"
